--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>NJsonApiCore</id>
-    <version>1.0.7</version>
+    <version>1.0.9</version>
     <authors>Rob Lang</authors>
     <owners>Rob Lang</owners>
     <projectUrl>http://brainwipe.github.io/NJsonApiCore</projectUrl>
@@ -18,23 +18,17 @@
         <dependency id="Newtonsoft.Json" version="9.0.1" />
       </group>
       <group targetFramework="net452">
-        <dependency id="CommonServiceLocator" version="1.3.0" />
         <dependency id="Humanizer.Core" version="2.1.0" />
         <dependency id="Newtonsoft.Json" version="9.0.1" />
-        <dependency id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" />
-        <dependency id="Unity" version="4.0.1" />
-        <dependency id="Unity.Mvc5" version="1.2.3" />
       </group>
     </dependencies>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Core" targetFramework="net452"/>
-      <frameworkAssembly assemblyName="System.Core" targetFramework="dotnet" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="netcoreapp1.1" />
     </frameworkAssemblies>
   </metadata>
   <files>
-    <file src="artifacts\src\NJsonApiCore.Web.MVC5\bin\release\net452\NJsonApiCore.dll" target="lib/net452" />
-    <file src="artifacts\src\NJsonApiCore.Web.MVC5\bin\release\net452\NJsonApiCore.Web.MVC5.dll" target="lib/net452" />
-    <file src="artifacts\src\NJsonApiCore.Web.MVCCore\bin\Release\netcoreapp1.0\NJsonApiCore.dll" target="lib/dotnet" />
-    <file src="artifacts\src\NJsonApiCore.Web.MVCCore\bin\Release\netcoreapp1.0\NJsonApiCore.Web.MVCCore.dll" target="lib/dotnet" />
+    <file src="src\NJsonApiCore\bin\Debug\net452\NJsonApiCore.dll" target="lib/net452" />
+    <file src="src\NJsonApiCore\bin\Debug\netcoreapp1.1\NJsonApiCore.dll" target="lib/netcoreapp1.1" />
   </files>
 </package>
