--- a/src/NJsonApiCore/project.json
+++ b/src/NJsonApiCore/project.json
@@ -3,17 +3,22 @@
 
     "dependencies": {
         "Humanizer.Core": "2.1.0",
-        "Microsoft.AspNetCore.Mvc": "1.0.0",
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0",
+
         "NETStandard.Library": "1.6.0",
         "Newtonsoft.Json": "9.0.1"
     },
     "frameworks": {
-        "netcoreapp1.0": {
+        "netcoreapp1.1": {
             "imports": [
                 "dotnet5.6",
                 "portable-net45+win8"
             ]
+        },
+        "net452": {
+          "frameworkAssemblies": {
+            "System.Linq": "4.0.0.0"
+          }
         }
     }
+
 }
